--- a/index.html
+++ b/index.html
@@ -1,21 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="./favicon.ico" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Portfolio et CV Web de moi : Jérôme Trottier"
-    />
-    <link rel="apple-touch-icon" href="/logo192.png" />
-    <title>Jérôme Trottier | Site Web</title>
-    <script defer="defer" src="./static/js/main.f09c297c.js"></script>
-    <link href="./static/css/main.8e6e1382.css" rel="stylesheet" />
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-  </body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Portfolio et CV Web de moi : Jérôme Trottier"/><link rel="apple-touch-icon" href="/logo192.png"/><title>Jérôme Trottier | Site Web</title><script defer="defer" src="/static/js/main.f09c297c.js"></script><link href="/static/css/main.20784d9c.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
